--- a/index.qmd
+++ b/index.qmd
@@ -1,12 +1,12 @@
 ---
-title: "Association of Germline Pathogenic Variants in ATM, CHEK2 and PALB2 with Mortality from Breast, Colorectal, or Pancreatic Cancer"
+title: "Supplemental materials (Version 1.0) Breast, Colorectal, and Pancreatic Cancer Mortality With Pathogenic Variants in _ATM_, _CHEK2_, or _PALB2_"
 ---
 
 :::{#about-pvm2}
 
-## Kurian A et.al.
+## Christine M. Veenstra, MD, MSHP ; Paul Abrahamse, MA2 ; Ann S. Hamilton, PhD Lihua Liu, PhD3 ; Steven J. Katz, MD, MPH ; Timothy P. Hofer, MD, MSc ; Kevin C. Ward, PhD4 ; and Allison W. Kurian, MD, MSc
 
-Supplemental information on data and complete model outputs as well as all R and Stata code used in the analyses presented in the paper
+Supplemental information on data and complete model outputs as well as all R and Stata code used for the analyses presented in the paper published 2025 in the Journal of Clinical Oncology DOI https://doi.org/10.1200/JCO-24-02442
 
 :::
 
