--- a/index.qmd
+++ b/index.qmd
@@ -4,11 +4,11 @@ title: "Supplemental materials (Version 1.0) Breast, Colorectal, and Pancreatic 
 
 :::{#about-pvm2}
 
-## Christine M. Veenstra, MD, MSHP ; Paul Abrahamse, MA2 ; Ann S. Hamilton, PhD Lihua Liu, PhD3 ; Steven J. Katz, MD, MPH ; Timothy P. Hofer, MD, MSc ; Kevin C. Ward, PhD4 ; and Allison W. Kurian, MD, MSc
+## Christine M. Veenstra, MD, MSHP; Paul Abrahamse, MA2 ; Ann S. Hamilton, PhD; Kevin C. Ward, PhD; Lihua Liu, PhD; Steven J. Katz, MD, MPH; Timothy P. Hofer, MD, MSc$^1$  and Allison W. Kurian, MD, MSc[^1]
 
 Supplemental information on data and complete model outputs as well as all R and Stata code used for the analyses presented in the paper published 2025 in the Journal of Clinical Oncology DOI https://doi.org/10.1200/JCO-24-02442
 
 :::
 
-
+[^1]: co-Senior authors
 
